# Py_web_HW_14

./: .gitignore  README.md  main.py  pyproject.toml  requirements.txt  test.db
alembic/: env.py
alembic/versions/: 38126f1a62e6_init.py  436d2f837620_init.py
app_contacts/: main.py
app_contacts/src/conf/: config.py
app_contacts/src/database/: db.py  models.py
app_contacts/src/repository/: contacts.py  groups.py  users.py
app_contacts/src/routes/: auth.py  contacts.py  groups.py  user.py
docs/: conf.py
htmlcov/: d_53606e9522d39d55_auth_py.html  d_53606e9522d39d55_contacts_py.html  d_53606e9522d39d55_groups_py.html  d_53606e9522d39d55_user_py.html  d_57fdb4e82e728119_contacts_py.html  d_57fdb4e82e728119_groups_py.html  d_57fdb4e82e728119_users_py.html  d_67f6f9a13eff1831_auth_py.html  d_67f6f9a13eff1831_email_py.html  d_67f6f9a13eff1831_upload_avatar_py.html  d_83bb46b0261c7dc5_config_py.html  d_dd4b322c5e9a5c17_contacts_py.html  d_dd4b322c5e9a5c17_groups_py.html  d_dd4b322c5e9a5c17_users_py.html  d_f1aa34bc7b1afc18_db_py.html  d_f1aa34bc7b1afc18_models_py.html  index.html  status.json
src/database/: db.py  models.py
src/repository/: contacts.py  groups.py  users.py
src/routes/: auth.py  contacts.py  groups.py  user.py
src/schemas/: contacts.py  groups.py  users.py
src/services/: auth.py  email.py  upload_avatar.py
tests/: conftest.py  test_main.py  test_routes_auth.py  test_routes_contacts.py  test_routes_groups.py  test_routes_user.py  test_unit_repository_contacts.py  test_unit_repository_groups.py  test_unit_repository_users.py
(+18 files in other folders)
