[tool.poetry]
name = "py-web-hw-14"
version = "0.1.0"
description = ""
authors = ["Oleksandr Kondratiuk <alex_kondr@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_web_hw_14"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
