[tool.poetry]
name = "py-web-hw-14"
version = "0.1.0"
description = ""
authors = ["Oleksandr Kondratiuk <alex_kondr@outlook.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "py_web_hw_14"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.21.1"
fastapi = "^0.95.0"
sqlalchemy = "^2.0.7"
pydantic = {extras = ["dotenv", "email"], version = "^1.10.7"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
passlib = "^1.7.4"
python-multipart = "^0.0.6"
bcrypt = "^4.0.1"
alembic = "^1.10.2"
fastapi-mail = "^1.2.6"
fastapi-limiter = "^0.1.5"
redis = "^4.5.3"
cloudinary = "^1.32.0"
psycopg2-binary = "^2.9.5"
python-dateutil = "^2.8.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
